--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     color: white; font-family: "Londrina Shadow"; text-align: center;
+background-image: linear-gradient(right, black, grey);
 }
 
 #box {
@@ -9,4 +10,12 @@ body {
     background-color: rgb(255, 255, 255);
     position: relative;
     bottom: 5rem;
+}
+
+h2 {
+    font-size: 10rem;
+}
+
+button {
+    font-size: 5rem;
 }
